--- a/style.css
+++ b/style.css
@@ -33,3 +33,69 @@ button {
   outline: 0;
   border: 0;
 }
+
+.container {
+  background-color: var(--yellow);
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card {
+  width: 77%;
+  height: 74%;
+  border: 1px solid black;
+  border-radius: 15px;
+  background-color: var(--white);
+  padding: 2rem;
+  box-shadow: 9px 7px 0px -2px rgba(0, 0, 0, 1);
+}
+
+.images {
+  border-radius: 10px;
+  margin-bottom: 2rem;
+}
+
+.button {
+  background-color: var(--yellow);
+  border-radius: 5px;
+  padding: 5px 8px;
+  margin-bottom: 1rem;
+  font-size: 10px;
+  font-weight: 800;
+}
+
+.subtitle {
+  font-weight: 600;
+  padding-bottom: 1.5rem;
+}
+
+.title {
+  font-size: 18px;
+  padding-bottom: 1rem;
+}
+
+.text {
+  color: var(--grey);
+  font-size: 12.5px;
+  font-weight: 600;
+  line-height: 20px;
+  padding-bottom: 2rem;
+}
+
+.conten_name {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.photo {
+  width: 3.5rem;
+}
+
+.text_name {
+  font-weight: 800;
+  font-size: 14px;
+}
