--- a/style.css
+++ b/style.css
@@ -44,8 +44,9 @@ button {
 }
 
 .card {
-  width: 77%;
-  height: 74%;
+  max-width: 400px;
+  width: 80%;
+  height: 80%;
   border: 1px solid black;
   border-radius: 15px;
   background-color: var(--white);
@@ -56,6 +57,7 @@ button {
 .images {
   border-radius: 10px;
   margin-bottom: 2rem;
+  width: 100%;
 }
 
 .button {
@@ -99,3 +101,46 @@ button {
   font-weight: 800;
   font-size: 14px;
 }
+
+
+@media (min-width: 420px) {
+    .card {
+      width: 85%;
+      height: 85%;
+    }
+  
+    .title {
+      font-size: 20px;
+      padding-bottom: 1rem;
+    }
+  
+    .text {
+      color: var(--grey);
+      font-size: 16px;
+      font-weight: 600;
+      line-height: 20px;
+      padding-bottom: 2rem;
+    }
+  }
+  
+
+@media (min-width: 464px) {
+  .card {
+    width: 85%;
+    height: 85%;
+  }
+
+  .title {
+    font-size: 20px;
+    padding-bottom: 1rem;
+  }
+
+  .text {
+    color: var(--grey);
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 20px;
+    padding-bottom: 2rem;
+  }
+}
+
